<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
       >


        <TextView
            style="@style/TextCardViewBold"
            android:text="@string/site_informations" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/ihsId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_ihs_id"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/operatorId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_operator_id"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_region"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/cluster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cluster"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/topology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_topology"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/configuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_configuration"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site_type"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>





    </LinearLayout>
</androidx.cardview.widget.CardView>