<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            style="@style/TextCardViewBold"
            android:text="@string/site_generator_information" />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_weight="0.4"

            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/numberOfGenerator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numberOfGenerator"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/generatorSize1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generatorSize1"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/generatorSize2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generatorSize2"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/generatorBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generatorBrand"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/generatorEngineBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generatorEngineBrand"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/generatorEngineType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generatorEngineType"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/generatorMainAlternatorBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generatorMainAlternatorBrand"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/generatorMainAlternatorType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generatorMainAlternatorType"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>