<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/header_site_management"
            style="@style/TextCardViewBold"
            android:text="@string/site_grid_information" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/fuelTankForme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fuelTankForme"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/fuelTankSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fuelTankSize"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:id="@+id/fuelTankCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fuelTankCapacity"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>